2011-12-07  Albert Chu <chu11@llnl.gov>

	* Support IPMI_FLAGS_NO_LEGAL_CHECK flag in libfreeipmi.

2011-12-07  Kaiwang Chen <kaiwang.chen@gmail.com>

	* contrib/pet/petalert.pl: Support PET acknowledge option.

2011-12-07  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/: Support "malformedack" workaround option.
	
2011-12-07  Albert Chu <chu11@llnl.gov>

	* common/man/: Various additions, tweaks, and modifications.
	
2011-12-06  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api: Re-arch LAN code to timeout on malformed
	packets rather than do an immediate retry.

2011-12-05  Kaiwang Chen <kaiwang.chen@gmail.com>

	* ipmi-pet/src/ipmi-pet.c (_ipmi_pet_parse_trap_data): Pass raw
	localtimestamp, not locally adjusted timestamp.

2011-12-05  Albert Chu <chu11@llnl.gov>

	* common/man/: Various code re-org and cleanup.

	* Fix up manpages for easier future maintenance.

	* Remove warnings when "compiling" manpages.

	* Fix compile warnings.

	* ipmi-pet/: Adjust ipmi-pet to look more like remaining FreeIPMI
	manpages.

	* Various manpage doc updates.
	
2011-12-05  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/src/: Fix warning.
	
2011-12-02  Albert Chu <chu11@llnl.gov>

	* Update IANA Enterprise validity macro.
	
2011-12-01  Albert Chu <chu11@llnl.gov>

	* Various documentation updates.

	* Update copyright years for release in 2012.

2011-11-30  Albert Chu <chu11@llnl.gov>

	* Various documentation updates.
	
2011-11-28  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_daemon_cmd_error_exit)
	(_daemon_cmd_error_noexit): Do not assume semaphore deleted on
	EINVAL.
	
2011-11-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/: Common function code cleanup.

	* libfreeipmi/src/spec/: Update iana numbers list.
	
2011-11-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/: Remove duplicate parameter checks.  Write
	common functions for variety of code.
	
2011-11-18  Albert Chu <chu11@llnl.gov>
