@@ -138,7 +138,9 @@ typedef enum ipmi_driver_type ipmi_driver_type_t;
  * option.  For example, NO_VALID_CHECK would still return an error if
  * an IPMI payload did not return a completion code in an IPMI
  * response.  The NO_LEGAL_CHECK would return such a packet to the
- * user without an error.
+ * user without an error.  If the payload did not return a completion
+ * code, the completion code would not be checked as well and a
+ * successful completion will be assumed.
  */
 
 #define IPMI_FLAGS_DEFAULT        0x00000000
